handle sonar